[FIX] web: Break too long customer names in kanban
Behaviour before PR:
In kanban view, the cards UI is broken when there are too long words
without spaces or breaks in the bottom half of the cards.

Desired behaviour after PR:
The words are broken so it fits in the cards without breaking the UI.

closes odoo/odoo#118650

Task: 3083665
X-original-commit: f7696bb31d7a15596892e16cc64e1ab3d6438aa4

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -118,6 +118,7 @@
         }
 
         .o_kanban_record_bottom {
+
             .oe_kanban_bottom_left,
             .oe_kanban_bottom_right {
                 display: flex;
@@ -135,6 +136,10 @@
                 .o_priority_star {
                     margin-top: 1px;
                     font-size: 18px;
+                }
+
+                span {
+                    overflow-wrap: anywhere;
                 }
             }
             .oe_kanban_bottom_right {
